Finished with day4  addition.

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
   width: 300px;
   margin: 25px auto;
   padding: 25px 0 25px 25px;
-  opacity: 0.8
+  /*opacity: 0.8git s*/
 }
 
 .border {
